# tree-sitter-ferret

./: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  go.mod  grammar.js  main.fer  package.json  pyproject.toml  setup.py  test_char.fer  test_const.fer  test_enum.fer  test_let.fer  test_type.fer  tree-sitter.json
bindings/c/: tree-sitter-ferret.pc.in
bindings/c/tree_sitter/: tree-sitter-ferret.h
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_ferret/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterFerretTests/: TreeSitterFerretTests.swift
src/: grammar.json  node-types.json  parser.c
