[package]
name = "tree-sitter-ferret"
description = "Ferret Language support"
version = "0.0.1"
authors = ["Fuad Hasan <fuad.cs22@gmail.com>"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "ferret"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/itsfuad/tree-sitter-ferret"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "/LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.25.10"
